@@ -1,5 +1,5 @@
 /* Hello, Emacs, this is -*-C-*-
- * $Id: win.trm,v 1.69 2009/07/16 23:40:30 sfeam Exp $
+ * $Id: win.trm,v 1.70 2009/12/31 01:21:43 sfeam Exp $
  */
 
 /* GNUPLOT - win.trm */
@@ -171,6 +171,13 @@ WIN_options()
     char *s;
     TBOOLEAN set_font = FALSE, set_fontsize = FALSE;
     TBOOLEAN set_title=FALSE;
+    /* shige */
+    static int readinit=0;
+
+    if (!readinit){
+	ReadGraphIni(&graphwin);
+	readinit=1;
+    }
 
     while (!END_OF_COMMAND) {
 	switch(lookup_table(&WIN_opts[0],c_token)) {
